--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.8",
     "@types/express-fileupload": "^1.1.5",
+    "@types/express-rate-limit": "^5.1.0",
     "ts-node": "^9.0.0",
     "tsc": "^1.20150623.0",
     "tslint": "^6.1.3",
@@ -27,8 +28,13 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "csr-gen": "^0.2.1",
+    "eth-crypto": "^1.8.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "express-fileupload": "^1.2.0"
+    "express-fileupload": "^1.2.0",
+    "express-rate-limit": "^5.1.3",
+    "request": "^2.88.2",
+    "requests": "^0.3.0"
   }
 }
