--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "type": "git",
     "url": "git://github.com/Shard-Labs/dappnode-cert-api.git"
   },
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
-    "prebuild": "rm -rf dist/* && tslint -c tslint.json -p    tsconfig.json --fix",
+    "prebuild": "rm -rf dist/* && tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc && cp -rf package.json dist/package.json",
-    "prestart": "npm run build",
-    "start": "ts-node ."
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "test": "mocha -r ts-node/register tests/**/*.spec.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,21 +20,33 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.8",
-    "@types/express-fileupload": "^1.1.5",
     "@types/express-rate-limit": "^5.1.0",
+    "@types/mocha": "^8.0.4",
+    "@types/supertest": "^2.0.10",
+    "chai": "^4.2.0",
+    "csr-gen": "^0.2.1",
+    "del": "^6.0.0",
+    "mocha": "^8.2.1",
+    "supertest": "^6.0.1",
     "ts-node": "^9.0.0",
     "tsc": "^1.20150623.0",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@types/dotenv-defaults": "^2.0.0",
+    "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.4",
     "body-parser": "^1.19.0",
-    "csr-gen": "^0.2.1",
+    "dotenv-defaults": "^2.0.1",
     "eth-crypto": "^1.8.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
-    "express-fileupload": "^1.2.0",
     "express-rate-limit": "^5.1.3",
+    "express-validator": "^6.7.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.6",
     "request": "^2.88.2",
     "requests": "^0.3.0"
   }
