--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.8",
     "@types/express-rate-limit": "^5.1.0",
     "@types/mocha": "^8.0.4",
@@ -37,17 +36,14 @@
     "@types/dotenv-defaults": "^2.0.0",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
-    "body-parser": "^1.19.0",
     "dotenv-defaults": "^2.0.1",
-    "eth-crypto": "^1.8.0",
+    "ethers": "^5.0.24",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-rate-limit": "^5.1.3",
     "express-validator": "^6.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6",
-    "request": "^2.88.2",
-    "requests": "^0.3.0"
+    "nodemon": "^2.0.6"
   }
 }
