--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
-version: '3.8'
+version: "3.8"
 
 services:
   cert-api:
     build: .
-    ports: 
+    ports:
       - "5000:5000"
-    volumes: 
+    volumes:
       - "cert-data:/etc/letsencrypt/"
-    environment: 
+    environment:
       - DEBUG=1
+
+volumes:
+  cert-data: {}
