--- a/package.json
+++ b/package.json
@@ -8,42 +8,45 @@
   },
   "main": "index.js",
   "scripts": {
-    "prebuild": "rm -rf dist/* && tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc && cp -rf package.json dist/package.json",
     "start": "ts-node src/index.ts",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "test": "mocha -r ts-node/register tests/**/*.spec.ts"
+    "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/express": "^4.17.8",
     "@types/express-rate-limit": "^5.1.0",
     "@types/mocha": "^8.0.4",
     "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "chai": "^4.2.0",
     "csr-gen": "^0.2.1",
-    "del": "^6.0.0",
+    "eslint": "^7.19.0",
     "mocha": "^8.2.1",
+    "prettier": "^2.2.1",
     "supertest": "^6.0.1",
     "ts-node": "^9.0.0",
     "tsc": "^1.20150623.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "dependencies": {
     "@types/dotenv-defaults": "^2.0.0",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
+    "@types/rimraf": "^3.0.0",
     "dotenv-defaults": "^2.0.1",
     "ethers": "^5.0.24",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-rate-limit": "^5.1.3",
-    "express-validator": "^6.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2"
   }
 }
