--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.1.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
     "nodemon": "^3.0.1",
     "rimraf": "^5.0.5"
   }
